--- a/TEMPLETFILES/emailVerfication.html
+++ b/TEMPLETFILES/emailVerfication.html
@@ -11,7 +11,6 @@
            body {
       line-height: 1.3;
       color: #333;
-      /* font-family: Public Sans, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
       font-family:serif;
     }
 
@@ -19,7 +18,7 @@
       background-color:white;
       text-align: center;
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-     max-width: 500px;
+      max-width: 500px;
       margin: 0 auto;
       border-top:3px solid #3586c4;
       border-left:2px solid #3586c4;
@@ -115,8 +114,8 @@
             </div>
             <div style=" width: fit-content; margin: auto;align-items: center;">
                 <div
-                    style="background-color: rgb(214, 222, 229) ;color: black; padding-left: 8px; padding-right: 8px; border-radius: 20px;height: 25px">
-                    Otp = 458763
+                    style="background-color: rgb(214, 222, 229) ;color: black; padding-left: 8px; padding-right: 8px; border-radius: 20px;height: 25px;text-align: center;display: flex;justify-content: center;">
+                    OTP : 458763
                 </div>
             </div>
             <hr style="width: 250px;margin-top:20px ;border-color: rgb(214, 222, 229);">
